PS DD close above overlay, PS DD left fix in right aligned FD

--- a/wwwroot/css/Eb.css
+++ b/wwwroot/css/Eb.css
@@ -361,7 +361,7 @@
     position: absolute;
     right: 0;
     top: 0;
-    z-index: 1;
+    z-index: 999;
     color: white;
     opacity: 0.2;
     background-color: red;
